# AedaProject-Selecao

./: CMakeLists.txt  Convocatoria.cpp  Convocatoria.h  Convocatorias.txt  Date.cpp  Date.h  Fornecedor.cpp  Fornecedor.h  Jogador.cpp  Jogador.h  Jogo.cpp  Jogo.h  Jogos.txt  Menus.cpp  Menus.h  Populacao.txt  Selecao.cpp  Selecao.h  Selecionador.cpp  Selecionador.h  Staff.cpp  Staff.h  Utils.cpp  Utils.h  main.cpp
